--- a/src/index.html
+++ b/src/index.html
@@ -3,8 +3,10 @@
   <head>
     <!-- The first thing in any HTML file should be the charset -->
     <meta charset="utf-8">
-    <!-- Make the page mobile compatible -->
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- Ensure proper rendering and touch zooming for all devices -->
+    <meta name="viewport" content="minimum-scale=1, initial-scale=1, width=device-width, shrink-to-fit=no"/>
+    <!-- Roboto Font -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500">
     <title>React.js Boilerplate</title>
   </head>
   <body>
