--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,16 @@
     <meta name="viewport" content="minimum-scale=1, initial-scale=1, width=device-width, shrink-to-fit=no"/>
     <!-- Roboto Font -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500">
+
+    <!-- Favicons -->
+    <link rel="apple-touch-icon" sizes="180x180" href="public/favicons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" href="public/favicons/favicon-32x32.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="public/favicons/favicon-16x16.png" sizes="16x16">
+    <link rel="mask-icon" href="public/favicons/safari-pinned-tab.svg" color="#5bbad5">
+
+    <!-- App and System Bar Color -->
+    <meta name="theme-color" content="#ffffff">
+
     <title>React.js Boilerplate</title>
   </head>
   <body>
